--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@ migrate_working_dir/
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you 
-may wish to be included in version control, so this line
+# VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
 
@@ -34,6 +33,7 @@ may wish to be included in version control, so this line
 /build/
 
 # Web related
+lib/generated_plugin_registrant.dart
 
 # Symbolication related
 app.*.symbols
